# pasty-rs

./: Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs  model.rs
